# remoteENV

./: .env.example  .gitignore  Cargo.toml  README.md  content.json  notes.txt
database/: db_map
dbg/: Cargo.toml
dbg/src/: crypt.rs  hasher.rs  main.rs  test2.rs
src/: files.rs  login.rs  main.rs  register.rs
