[package]
name = "remoteENV"
version = "0.0.1"
authors = ["archways404 <archways@gmx.us>"]
edition = "2021"

# Add this section
[[bin]]
name = "rnv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"