[package]
name = "dbg"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
rand = "0.8"

aes = "0.7"             # For AES encryption
block-modes = "0.8"      # For block modes like CBC
block-padding = "0.2"    # For PKCS7 padding
pbkdf2 = "0.12"          # For PBKDF2 key derivation
sha2 = "0.10"            # For using SHA-256 in PBKDF2